Customizable prompt system: quick prompts editor, global rules, EDT fix
- PromptsTab rewritten: text editor for system prompts, visual table
  editor for quick prompts (add/remove/reorder/duplicate/AI assistant)
- Global Rules prompt injected into ALL LLM calls (proxy config,
  output format, safety constraints) — editable in Prompts tab
- Quick prompts (Agent sidebar + Toolkit dropdown) loaded from
  PromptManager with filesystem override support
- AI assistant in quick prompts editor: describe an idea, LLM
  generates a professional label + prompt
- Fix ASK mode EDT freeze: move action execution from done() to
  doInBackground() using publish/process pattern
- API key validation in LLMProviderFactory with clear error message
- Trim API key on save to prevent whitespace issues
- Fix registry ordering: use Collections.unmodifiableMap instead of
  Map.copyOf to preserve LinkedHashMap insertion order

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>